--- a/Practice.css
+++ b/Practice.css
@@ -1,4 +1,4 @@
-/* h2 {
+/* /* h2 {
     color: orange;
 }
 button{
@@ -24,13 +24,13 @@ p{
     font-family: 'Courier New', Courier, monospace;
     background-color: azure;
  } */  
-  /* element selector 
+   element selector 
   h1,
   h2{
     color: brown;
-  } */
+  } 
    /* Id selector */
-   /* h1{
+   #h1{
     color:#A82400;
    }
    #Login{
@@ -42,6 +42,7 @@ p{
     color: white;
    }
    #Qu{
+    color:#A82400;
     text-align: center;
     font-size:50px ;
    }
@@ -51,7 +52,8 @@ p{
    #Pass{
     text-align: right;
    } */
-   #op{
+   /* descendant selector */
+   /* #op{
     border:black solid;
     width: 250px;
     height: 250px;
@@ -65,3 +67,9 @@ p{
         justify-content: center;
         align-items: center;
     }
+     /* div [p]{
+        color: green;
+     }
+     .hello{
+        color: brown;
+     } */
