--- a/Quora.css
+++ b/Quora.css
@@ -46,7 +46,25 @@
     text-align:right;
     margin: 30px;
    }
-   .aman li a{
-    display: inline-block;
-    color: rgba(red,red,red, yellow);
+   .aman {
+    display: flex;
+    gap: 40px;
+    list-style: none;
    }
+   .aman a{
+    text-decoration: none;
+    color: red;
+   }
+   div h2{
+    color: rgba(0,175,200,0.6);
+   }
+   #none a{
+    text-decoration: none;
+    color: red;
+   }
+   #none button:hover {
+    color: red;
+    background-color: aliceblue;
+    border-radius: 20px;
+   }
+  
