--- a/PracticeQs.css
+++ b/PracticeQs.css
@@ -1,11 +1,22 @@
-#h1{
-    font-family: 'Courier New';
-    color: #1b74e4;
+.Card{
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    box-shadow: 2px 4px 8px black;
+    transition: 1s;
 }
-.userbtn{
-    background-color: aqua;
+.Source{
+    padding: 0 2px 0 2px;
 }
-#searchbtn{
-    background-color: black;
-    color: white;
+
+img{
+    width:50%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.Card:hover{
+    box-shadow: 0px 8px 16px black ;
 }
