--- a/Quora.css
+++ b/Quora.css
@@ -8,9 +8,6 @@
     color:#A82400;
     text-align: center;
    }
-   #button{
-    margin: 20px;
-   }
    #Login{
     background-color: brown;
     color: white;
@@ -41,6 +38,7 @@
     "SCAN" 0,
     "XELA" 0,
     "YELA" 0;
+    text-shadow: 2px 2px 10px lightgreen;
 }
    #User{
     text-align:right;
@@ -62,9 +60,25 @@
     text-decoration: none;
     color: red;
    }
+   #none h2{
+    text-shadow: 2px 2px 10px lightcoral;
+   }
    #none button:hover {
     color: red;
     background-color: aliceblue;
     border-radius: 20px;
    }
+.Card{
+  width:200px;
+  height: 200px;
+  display: inline-block;
+  border: 2px solid black;
+  margin: 10px;
+}
+.resource{
+  padding: 10px;
+}
+img{
+    width:100%;
+  }
   
