--- a/PracticeQs.css
+++ b/PracticeQs.css
@@ -18,5 +18,35 @@ img{
     border-top-right-radius: 5px;
 }
 .Card:hover{
-    box-shadow: 0px 8px 16px black ;
+    box-shadow: 0px 8px 16px rebeccapurple ;
+}
+#outer{
+    width: 400px;
+    height: 400px;
+    border:2px solid black;
+    background-color: yellow;
+    border-radius: 50%;
+    position: fixed;
+}
+#eye{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    border: 2px solid black;
+    background-color: black;
+    border-radius: 50%;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+#mouth{
+    width: 200px;
+    height: 50px;
+    border: 2px solid black;
+    background-color: red;
+    border-radius: 0 0 20px 20px ;
+    margin-left: 100px;
+    margin-top: 100px;
+}
+#outer:hover{
+    box-shadow: 2px 2px 8px 6px red;
 }
