--- a/PracticeQs.css
+++ b/PracticeQs.css
@@ -18,13 +18,13 @@ img{
     border-top-right-radius: 5px;
 }
 .Card:hover{
-    box-shadow: 0px 8px 16px rebeccapurple ;
+    box-shadow: 0px 8px 16px brown ;
 }
 #outer{
     width: 400px;
     height: 400px;
     border:2px solid black;
-    background-color: yellow;
+    background-color: red;
     border-radius: 50%;
     position: fixed;
 }
