--- a/PracticeQs.css
+++ b/PracticeQs.css
@@ -24,7 +24,7 @@ img{
     width: 400px;
     height: 400px;
     border:2px solid black;
-    background-color: red;
+    background-color: yellow;
     border-radius: 50%;
     position: fixed;
 }
@@ -42,7 +42,7 @@ img{
     width: 205px;
     height: 52px;
     border: 2px solid black;
-    background-color: red;
+    background-color:red;
     border-radius: 0 0 20px 20px ;
     margin-left: 100px;
     margin-top: 100px;
